--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,7 @@ header{
     background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);
 }
     
-    
+ .icon{display: none;}   
 .nav{
     display: flex;
     justify-content: space-between;
