--- a/style/meidaquery.css
+++ b/style/meidaquery.css
@@ -1,7 +1,11 @@
 @media screen  and (max-width: 576px)  {
 
     .info{ display: none; }
-
+    .icon{
+        display: block;
+        color: white;
+        margin: 0 auto;
+     }
     
     .fitnessheader h1 {
         font-size: 2rem;
@@ -78,6 +82,10 @@
  width: 50%;
  padding: 50px;
 }
+.one , .four{
+    display: none;
+}
+
 .teamhead p {
     width: 360px;
     margin: 0 auto;
