--- a/style/meidaquery.css
+++ b/style/meidaquery.css
@@ -1,10 +1,12 @@
 @media screen  and (max-width: 576px)  {
-
+ body{
+    border: 5px solid white;
+ }
     .info{ display: none; }
     .icon{
         display: block;
         color: white;
-        margin: 0 auto;
+        justify-content: space-between;
      }
     
     .fitnessheader h1 {
@@ -17,25 +19,34 @@
             width: 60%; }
             .bigvideobtn>span {
                 font-size: 2rem; }
- .bigvideobtn {
+ 
+                .bigvideobtn {
+                    width: 160px;
                     border-radius: 10px;
-                    left: 260px;
-                    top: -530px;
+                    left: 60px;
+                    top: -310px;
                     padding: 10px 20px;
                     border: none;
-                }
-.fitnessheader {             
- flex-direction: column; }               
+                } 
+.fitnessheader {
+flex-direction: column;
+width: 60%;}             
     .videobtn {  
-        right: 261px;
-        top: -260px; } 
-   .circle {
-    top: -385px;
-    right: -100px;}
-    
+        left: 35px;
+        top: -220px;
+        padding: 10px 30px 10px 30px;
+     } 
+        .videobtn>span {
+            font-size: 1.4rem;}
+            .circle {
+                top: -265px;
+                right: -50px;
+                width: 20px;
+                height: 20px;
+            }
 
 .habit >  h2 {
-    font-size: 2.5rem;}
+    font-size: 2rem;}
     .habit>p {
         width: 300px;
         margin: 0 auto;} 
@@ -47,26 +58,28 @@
     flex-direction: column;
 } 
 .runcontainer {
-    width: 450px;
-    height: 650px;
+    width: 60%;
+    height: 50%;
     display: flex;
     flex-direction: column;
 }
 .runcontainer img {
-    width: 400px;
+    width: 100%;
     height: 300px;
-    border-radius: 30px;
+    border-radius: 20px;
 }
 
 .joinbtn {
     width: 340px;
     height: 50px;
-    position: relative;
+    margin-bottom:10px;
     padding: 5px 20px 5px 20px;
 }
 .BMI{
-    margin-left: 0;
-}
+    margin-left: 0;}
+.BMI > h1 {
+    font-size: 2.5rem;}
+.BMI>p { width: 300px;}
 .bmisection {
     display: flex;
     flex-direction: column;
