--- a/style/meidaquery.css
+++ b/style/meidaquery.css
@@ -1,6 +1,6 @@
 @media screen  and (max-width: 576px)  {
  body{
-    border: 5px solid white;
+    border: 5px solid rgb(80, 78, 78);
  }
     .info{ display: none; }
     .icon{
@@ -8,7 +8,9 @@
         color: white;
         justify-content: space-between;
      }
-    
+    header{
+        height: 750px;
+    }
     .fitnessheader h1 {
         font-size: 2rem;
     }
@@ -58,7 +60,7 @@ width: 60%;}
     flex-direction: column;
 } 
 .runcontainer {
-    width: 60%;
+    width: 80%;
     height: 50%;
     display: flex;
     flex-direction: column;
@@ -70,7 +72,7 @@ width: 60%;}
 }
 
 .joinbtn {
-    width: 340px;
+    width: 360px;
     height: 50px;
     margin-bottom:10px;
     padding: 5px 20px 5px 20px;
@@ -81,24 +83,28 @@ width: 60%;}
     font-size: 2.5rem;}
 .BMI>p { width: 300px;}
 .bmisection {
-    display: flex;
     flex-direction: column;
 }
 .bmichart{
-    margin-left: 0 ; 
-}
+    margin-left: 0 ;
+    width: 100%;}
+
 .teamhead h1 { font-size: 2.4rem;}
 
 .teamcontainer{
  display: flex;
  flex-direction: column;
- width: 50%;
- padding: 50px;
+ width: 70%;
+ padding: 30px;
 }
 .one , .four{
     display: none;
 }
-
+.team>img {
+    width: 100%;
+    height: 250px;
+    border-radius: 16px;
+}
 .teamhead p {
     width: 360px;
     margin: 0 auto;
