--- a/style/meidaquery.css
+++ b/style/meidaquery.css
@@ -1,7 +1,7 @@
 @media screen  and (max-width: 576px)  {
- /* body{
+ body{
     border: 5px solid rgb(80, 78, 78);
- } */
+ }
     .info{ display: none; }
     .icon{
         display: block;
@@ -130,13 +130,31 @@ width: 60%;}
     margin-bottom: 20px;
 
 }
+    /* unique section  */
+    .fitt {
+        align-items: center;
+        flex-direction: column;
+    }
+    .YOUGA {
+        flex-direction: column;
+        align-items: center;
+    }
+    .youga {
+        margin-bottom: 20px;
+    }
+    .fitt > p {
+        font-size: .7rem;}
+    .fitt> h1 {
+        font-size: 1.3rem;}
+
+ /* footer section  */
 .footer p {
     width: 70%;}
 .footer{
     flex-direction: column;
 }
 .footerdiv {
-    width: 100%; 
+    width: 85%; 
 }
 .footdivone {
     position: relative;
@@ -167,5 +185,10 @@ width: 60%;}
             width: 16px;
             height: 16px;
         }
+        header{
+            height: 650px;
+        }  
+        
 }
+
 
