--- a/style/meidaquery.css
+++ b/style/meidaquery.css
@@ -52,13 +52,20 @@ width: 60%;}
     border: none;
 }
         .videobtn>span {
-            font-size: 1rem;}
+            font-size: 1.3rem;}
             .circle {
-                top: -255px;
-                right: -85px;
-                width: 15px;
-                height: 15px;
+                top: -258px;
+                right: -70px;
+                width: 22px;
+                height: 22px;
             }
+            .plaicon{
+    color: white;
+    position: relative;
+    top: -280px;
+    right: -77px;
+}
+
 
 .habit >  h2 {
     font-size: 2rem;}
@@ -180,10 +187,16 @@ width: 60%;}
             border: none;
         }
         .circle {
-            top: -258px;
-            right: -50px;
-            width: 16px;
-            height: 16px;
+            top: -262px;
+            right: -46px;
+            width: 20px;
+            height: 20px;
+        }
+        .plaicon {
+            color: white;
+            position: relative;
+            top: -283px;
+            right: -52px;
         }
         header{
             height: 650px;
