--- a/style/style.css
+++ b/style/style.css
@@ -355,9 +355,9 @@ color:rgb(255, 255, 255) ;
     margin-bottom: 50px;  
     padding:  30px  40px;
     
-}
+} 
 .team>h5 {
-    font-size: 1.4rem;
+    font-size: 1rem;
     font-weight: bold;
     color:rgb(255, 255, 255);
     position: relative;
@@ -466,8 +466,9 @@ font-size: 1.5rem;
     width: 250px;
     height: 300px;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
-.one{
+.onee{
     background-color: rgb(5, 158, 107);
 }
 
@@ -479,7 +480,7 @@ font-size: 1.5rem;
     height: 300px;
     margin-bottom: 10px;
 }
-.two{
+.twoo{
     background-color: rgb(226, 188, 138);
 }
 .youga-3{
@@ -490,7 +491,7 @@ font-size: 1.5rem;
     height: 300px;
     margin-bottom: 10px;
 }
-.three{
+.thrree{
     background-color: rgb(119, 197, 197);
 }
 .youga-4{
@@ -501,7 +502,7 @@ font-size: 1.5rem;
     height: 300px;
     margin-bottom: 10px;
 }
-.four{
+.fourr{
     background-color: rgb(53, 99, 78);
 }
 .yougabutn{
